

2018-05-07 Franz Holzinger <franz@ttproducts.de>
    * migration: replace all t3lib_div calls by TYPO3\CMS\Core\Utility\GeneralUtility. TYPO3 6.1 is a minimum requirement now.
    * Remove the file ext_autoload.php because the composer.json should do the job now.

2017-04-14 Franz Holzinger <franz@ttproducts.de>
    * bugfix: error in composer.json

2017-03-28 Franz Holzinger <franz@ttproducts.de>
    * ready for TYPO3 8.x
    * add composer.json

2016-12-01 Franz Holzinger <franz@ttproducts.de>
	* bug fix: setRequiredFieldArray shall filter out all fields which are not coming from TYPO3 or are in the TCA

2016-10-18 Franz Holzinger <franz@ttproducts.de>
	* new feature: add an optional replace configuration for the method searchWhere in order to have alternatives for character sequences

2016-10-10 Franz Holzinger <franz@ttproducts.de>
	* new feature: add COLLATE in SQL functions if the new parameter $collateConf has been set
	* pass the fallback parameter to SQL functions
	* remove class.tx_table_div.php

2016-05-10 Franz Holzinger <franz@ttproducts.de>
	* support for PHP 7
	* new feature: pidInList = -1 to show the records of all pages - pid_list

2015-12-21 Franz Holzinger <franz@ttproducts.de>
	* support for language fallback
	* bug fix: do not separate entered string by characters if REGEXP is used for the searchWhere function

2015-07-24 Franz Holzinger <franz@ttproducts.de>
	* tested under TYPO3 7.4.0 alpha

2015-06-13 Franz Holzinger <franz@ttproducts.de>
	* ready for TYPO3 7.2
	* remove the constants TABLE_EXTkey and PATH_BE_table because there is the autoload file ext_autoload.php

2014-11-27 Franz Holzinger <franz@ttproducts.de>
	* use $GLOBALS['TYPO3_DB']
	* make table library callable from the backend

2014-08-12 Franz Holzinger <franz@ttproducts.de>
	* introduce new db passthrough check
	* fix bug debug_trail: debugTrail
	* no t3lib_div::loadTCA since TYPO3 6.1

2013-11-21 Franz Holzinger <franz@ttproducts.de>
	* modifications for TYPO3 6.2
