@@ -3,6 +3,8 @@
 2018-05-07 Franz Holzinger <franz@ttproducts.de>
     * migration: replace all t3lib_div calls by TYPO3\CMS\Core\Utility\GeneralUtility. TYPO3 6.1 is a minimum requirement now.
     * Remove the file ext_autoload.php because the composer.json should do the job now.
+    * migration: use TYPO3\CMS\Core\Utility\DebugUtility and TYPO3\CMS\Core\Utility\MathUtility for functions intInRange, debug and debugTrail of class tx_div2007_core.
+
 
 2017-04-14 Franz Holzinger <franz@ttproducts.de>
     * bugfix: error in composer.json
